--- a/web project/login.html
+++ b/web project/login.html
@@ -4,8 +4,8 @@
         <img id="profile-img" class="profile-img-card" src="C:\Users\User\Desktop\New folder\web project\images\login.png" />
         <p id="profile-name" class="profile-name-card"></p>
         <form class="form-signin">
-            <span id="reauth-email" class="reauth-email"></span>
-            <input type="email" id="inputEmail" class="form-control" placeholder="NIC Number" required autofocus>
+            <span id="reauth-NIC" class="reauth-NIC"></span>
+            <input type="NIC" id="inputNIC" class="form-control" placeholder="NIC Number" required autofocus>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
             <div id="remember" class="checkbox">
                 <label>
@@ -81,7 +81,7 @@ body, html {
     min-height: 1em;
 }
 
-.reauth-email {
+.reauth-NIC {
     display: block;
     color: #404040;
     line-height: 2;
@@ -96,14 +96,14 @@ body, html {
     box-sizing: border-box;
 }
 
-.form-signin #inputEmail,
+.form-signin #inputNIC,
 .form-signin #inputPassword {
     direction: ltr;
     height: 44px;
     font-size: 16px;
 }
 
-.form-signin input[type=email],
+.form-signin input[type=NIC],
 .form-signin input[type=password],
 .form-signin input[type=text],
 .form-signin button {
