--- a/web project/login.html
+++ b/web project/login.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="card card-container">
      
-        <img id="profile-img" class="profile-img-card" src="C:\Users\User\Desktop\New folder\web project\images\login.png" />
+        <img id="profile-img" class="profile-img-card" src="location:/image/login.png" />
         <p id="profile-name" class="profile-name-card"></p>
         <form class="form-signin">
             <span id="reauth-NIC" class="reauth-NIC"></span>
