--- a/web project/index.html
+++ b/web project/index.html
@@ -77,7 +77,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="C:\Users\User\Desktop\New folder\web project\login.html"><font color="black">Login</font></a>
+                        <a href="..\web project\login.html"><font color="black">Login</font></a>
                         </li>
 						<li><a href="#"><font color="black">Contact us</font></a>
                     </li>
@@ -106,14 +106,14 @@
 
     <div class="container-fluid">
         <div class="row promo">
-            <a href="C:\Users\User\Desktop\New folder\web project\floods.html">
+            <a href="..\web project\floods.html">
                 <div class="col-md-4 promo-item item-1">
                     <h3>
                         Floods
                     </h3>
                 </div>
             </a>
-            <a href="C:\Users\User\Desktop\New folder\web project\droughts or water cuts">
+            <a href="..\web project\droughts or water cuts.html">
                 <div class="col-md-4 promo-item item-2">
                     <h3>
                       Drougts
@@ -121,7 +121,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a href="..\web project\accidents.html">
                 <div class="col-md-4 promo-item item-3">
                     <h3>
                        Accidents
@@ -135,14 +135,14 @@
 
     <div class="container-fluid">
         <div class="row promo">
-            <a href="C:\Users\User\Desktop\New folder\web project\floods.html">
+            <a href="..\web project\tsunami.html">
                 <div class="col-md-4 promo-item item-4">
                     <h3>
                         Tsunami
                     </h3>
                 </div>
             </a>
-            <a href="C:\Users\User\Desktop\New folder\web project\droughts or water cuts">
+            <a href="..\web project\fires.html">
                 <div class="col-md-4 promo-item item-5">
                     <h3>
                       Fires
@@ -150,7 +150,7 @@
                 </div>
             </a>
 
-            <a href="#">
+            <a href="..\web project\powercuts.html">
                 <div class="col-md-4 promo-item item-6">
                     <h3>
                        Electrical breakdowns and Leakages
@@ -162,14 +162,14 @@
 
     <div class="container-fluid">
         <div class="row promo">
-            <a href="C:\Users\User\Desktop\New folder\web project\floods.html">
+            <a href="..\web project\landslides.html">
                 <div class="col-md-4 promo-item item-7">
                     <h3>
                         Landslides
                     </h3>
                 </div>
             </a>
-            <a href="C:\Users\User\Desktop\New folder\web project\droughts or water cuts">
+            <a href="..\web project\droughts or water cuts">
                 <div class="col-md-4 promo-item item-8">
                     <h3>
                       Fires
