--- a/web project/login.html
+++ b/web project/login.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="card card-container">
      
-        <img id="profile-img" class="profile-img-card" src="C:\Users\User\Desktop\New folder\web project\images\login.png" />
+        <img id="profile-img" class="profile-img-card" src="images\login.png" />
         <p id="profile-name" class="profile-name-card"></p>
-        <form class="form-signin">
+        <form action="login"method="post"class="form-signin">
             <span id="reauth-email" class="reauth-email"></span>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
@@ -90,7 +90,7 @@ body, html {
     text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+   
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
